# ocr-provider

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deployments/gpu4/: easyocr-zh-en.env.example  public.Caddyfile  rapidocr-auto.env.example
deployments/local/: rapidocr-cpu.env.example  tesseract-cpu.env.example
docs/: OCR_PROVIDER_ACCEL_BENCHMARK.md  OCR_PROVIDER_BENCHMARK.md  OCR_PROVIDER_REALWORLD_BENCHMARK.md  OCR_PROVIDER_REMOTE_BENCHMARK.md
docs/superpowers/plans/: 2026-06-06-vertical-ocr-layout.md
provider/: __init__.py  app.py  config.py  engines.py  gpu_worker.py  layout.py
scripts/: benchmark_document_ocr.py  benchmark_document_ocr_realworld.py  benchmark_document_ocr_remote.py  bootstrap_venv.sh  deploy_gpu4.sh  run_systemd_instance.sh  start_host_instance.sh  start_public_caddy.sh  start_public_cloudflared.sh  status_host_instance.sh  stop_host_instance.sh  up_instance.sh
tests/: test_admission_controller.py  test_layout_postprocess.py  test_rapidocr_layout_integration.py
