[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr-provider"
version = "0.1.0"
description = "Standalone OCR service for document/image ingest"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.115.0",
    "Pillow>=10.4.0",
    "PyMuPDF>=1.24.10",
    "uvicorn[standard]>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["provider"]
